--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+  <link rel="stylesheet" href="src/app.css" />
+</head>
+
+<body class="bg-slate-100">
+  <header class="bg-white shadow-md px-6">
+    <div class="flex justify-between items-center h-16 max-w-3xl mx-auto">
+      <button class="text-slate-500 hover:text-slate-900 hover:bg-slate-300 p-1 -m-1 focus:ring-1 ring-purple-600">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+        </svg>
+      </button>
+      <div class="flex -mr-4 items-center">
+        <embed type="image/svg+xml" src="/vite.svg" />
+        <div class="space-x-8 ml-8 hidden md:flex">
+          <a class="px-3 py-2 text-slate-500" href="/">Home</a><a
+            class="px-3 py-2 hover:text-slate-500 transition-colors" href="/about">About</a><a
+            class="px-3 py-2 hover:text-slate-500 transition-colors" href="/contact">Contact</a>
+        </div>
+      </div>
+      <div>
+        <button class="text-slate-500 hover:text-slate-900 p-1 hover:bg-slate-300 rounded-full">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+          </svg>
+        </button>
+        <button class="ml-4 text-slate-500 hover:text-slate-900 hover:bg-slate-300 rounded-full">
+          <img class="h-6 w-6 rounded-full" src="https://ui-avatars.com/api?name=Alan+Cienega" alt="AlanCienega" />
+        </button>
+      </div>
+    </div>
+    <div class="space-y-1 border-t pb-3 pt-2 md:hidden">
+      <a href="/" class="bg-slate-400 text-white block px-3 py-2 rounded-md">Home</a>
+      <a href="/" class="hover:bg-slate-400 hover:text-white block px-3 py-2 rounded-md transition-colors">About</a>
+      <a href="/" class="hover:bg-slate-400 hover:text-white block px-3 py-2 rounded-md transition-colors">Contact</a>
+    </div>
+  </header>
+  <div class="grid justify-items-stretch grid-cols-1 md:grid-cols-3 m-4">
+    <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700">
+      <div class="bg-slate-300 py-2">
+        Rock Paper Scissors
+      </div>
+      <p class="bg-slate-200 text-slate-800">Juega Piedra papel tijera, chin chan pu o como sea que lo conozcas, dale.
+      </p>
+      <a href="/rps/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
+    </div>
+  </div>
+</body>
+
 </html>
