--- a/index.html
+++ b/index.html
@@ -45,14 +45,23 @@
       <a href="/" class="hover:bg-slate-400 hover:text-white block px-3 py-2 rounded-md transition-colors">Contact</a>
     </div>
   </header>
-  <div class="grid justify-items-stretch grid-cols-1 md:grid-cols-3 m-4">
-    <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700">
+  <div class="grid justify-items-stretch grid-cols-1 md:grid-cols-3 m-4 space-y-2">
+    <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 mx-2">
       <div class="bg-slate-300 py-2">
         Rock Paper Scissors
       </div>
       <p class="bg-slate-200 text-slate-800">Juega Piedra papel tijera, chin chan pu o como sea que lo conozcas, dale.
       </p>
       <a href="/rps/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
+    </div>
+    <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 mx-2">
+      <div class="bg-slate-300 py-2">
+        Memorama
+      </div>
+      <p class="bg-slate-200 text-slate-800">Juega al Memorama, tienes varios niveles, puedes elegir n numero de cartas
+        por revelar
+      </p>
+      <a href="/memo/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
     </div>
   </div>
 </body>
