--- a/rps/index.html
+++ b/rps/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-slate-200 items-center" id="body">
-  <div class="flex justify-end max-w-3xl mx-auto hover:text-slate-600"><a href="/">Regresar</a></div>
+  <div class="flex justify-end max-w-3xl mx-auto hover:text-slate-600 p-4"><a href="/">Regresar</a></div>
   <div class="grid grid-cols-1 md:grid-cols-3 text-center text-7xl my-8 items-center max-w-3xl mx-auto">
     <span id="rock" class="cursor-pointer hover:text-8xl transition-all my-9">&#129704;</span>
     <span id="paper" class="cursor-pointer hover:text-8xl transition-all my-9">&#129531;</span>
