--- a/memo/index.html
+++ b/memo/index.html
@@ -19,9 +19,7 @@
   </center>
   <div
     class="hidden m-3 bg-slate-200 rounded-md hover:text-white hover:shadow-purple-700 shadow-lg h-20 text-5xl text-black">
-    Div
-    para usar
-    clases no dinamicas</div>
+    Div para usar clases no dinamicas</div>
   <div class="text-white bg-green-500"></div>
   <script src="index.js"></script>
 </body>
