--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="/" class="hover:bg-slate-400 hover:text-white block px-3 py-2 rounded-md transition-colors">Contact</a>
     </div>
   </header>
-  <div class="grid justify-items-stretch grid-cols-1 md:grid-cols-3 m-4 space-y-2">
+  <div class="grid justify-items-stretch grid-cols-1 md:grid-cols-3 m-4">
     <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 mx-2">
       <div class="bg-slate-300 py-2">
         Rock Paper Scissors
@@ -62,6 +62,14 @@
         por revelar
       </p>
       <a href="/memo/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
+    </div>
+    <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 mx-2">
+      <div class="bg-slate-300 py-2">
+        El fabuloso Fred
+      </div>
+      <p class="bg-slate-200 text-slate-800"> El clasico juego retro de Fred de los años 80s con JavaScript y Tailwind
+      </p>
+      <a href="/fred/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
     </div>
   </div>
 </body>
