--- a/index.html
+++ b/index.html
@@ -47,38 +47,45 @@
   </header>
   <div class="grid justify-items-stretch grid-cols-1 md:grid-cols-3 m-4">
     <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 m-2">
-      <div class="bg-slate-300 py-2">
-        Rock Paper Scissors
-      </div>
-      <p class="bg-slate-200 text-slate-800">Juega Piedra papel tijera, chin chan pu o como sea que lo conozcas, dale.
+      <div class="bg-slate-300 py-2">Rock Paper Scissors</div>
+      <p class="bg-slate-200 text-slate-800">
+        Juega Piedra papel tijera, chin chan pu o como sea que lo conozcas,
+        dale.
       </p>
       <a href="/rps/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
     </div>
     <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 m-2">
-      <div class="bg-slate-300 py-2">
-        Memorama
-      </div>
-      <p class="bg-slate-200 text-slate-800">Juega al Memorama, tienes varios niveles, puedes elegir n numero de cartas
-        por revelar
+      <div class="bg-slate-300 py-2">Memorama</div>
+      <p class="bg-slate-200 text-slate-800">
+        Juega al Memorama, tienes varios niveles, puedes elegir n numero de
+        cartas por revelar
       </p>
       <a href="/memo/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
     </div>
     <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 m-2">
-      <div class="bg-slate-300 py-2">
-        El fabuloso Fred
-      </div>
-      <p class="bg-slate-200 text-slate-800"> El clasico juego retro de Fred de los años 80s con JavaScript y Tailwind
+      <div class="bg-slate-300 py-2">El fabuloso Fred</div>
+      <p class="bg-slate-200 text-slate-800">
+        El clasico juego retro de Fred de los años 80s con JavaScript y
+        Tailwind
       </p>
       <a href="/fred/index.html" class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
     </div>
     <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 m-2">
-      <div class="bg-slate-300 py-2">
-        Ahorcado
-      </div>
-      <p class="bg-slate-200 text-slate-800"> ¿Quien es ese pokemon? Juega a adivinar el nombre del pokemon oculto en
-        los espacios te texto
+      <div class="bg-slate-300 py-2">Ahorcado</div>
+      <p class="bg-slate-200 text-slate-800">
+        ¿Quien es ese pokemon? Juega a adivinar el nombre del pokemon oculto
+        en los espacios de texto.
       </p>
       <a href="/hangman/index.html"
+        class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
+    </div>
+    <div class="justify-self-auto rounded-lg text-center hover:shadow-lg hover:shadow-purple-700 m-2">
+      <div class="bg-slate-300 py-2">Tic tac toe</div>
+      <p class="bg-slate-200 text-slate-800">
+        Gato, tres en raya, tic tac toe, juega en modo multijugador a este
+        sencillo pero divertido juego
+      </p>
+      <a href="/tic-tac-toe/index.html"
         class="bg-slate-300 rounded-b-md block hover:text-white hover:bg-purple-600">Jugar</a>
     </div>
   </div>
