--- a/fred/index.html
+++ b/fred/index.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>El fabuloso Fred</title>
+    <link rel="stylesheet" href="../src/app.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>El fabuloso Fred</title>
-  <link rel="stylesheet" href="../src/app.css" />
-</head>
+  <body class="bg-stone-50">
+    <div class="flex justify-end max-w-3xl mx-auto hover:text-slate-600 p-4">
+      <a href="/">Regresar</a>
+    </div>
+    <center>
+      <p id="info" class="font-bold text-3xl">¿Listo?</p>
+    </center>
+    <center class="max-w-3xl mx-auto">
+      <section id="board" class="grid grid-cols-3"></section>
+      <button
+        id="btnGameOver"
+        class="bg-slate-600 text-white hover:bg-slate-500 p-2 rounded-md hidden"
+        onclick="location.reload()"
+      >
+        Jugar de nuevo
+      </button>
+    </center>
+    <div class="hidden">
+      <div class="m-2 rounded-md hover:shadow-purple-700 shadow-lg h-32"></div>
+      <!-- clases de botones -->
+      <span class="bg-red-300"></span>
+      <span class="bg-red-600"></span>
 
-<body class="bg-stone-50">
-  <div class="flex justify-end max-w-3xl mx-auto hover:text-slate-600 p-4"><a href="/">Regresar</a></div>
-  <center>
-    <p id="info" class="font-bold text-3xl"> Ready? </p>
-  </center>
-  <center class="max-w-3xl mx-auto">
-    <section id="board" class="grid grid-cols-3"></section>
-  </center>
-  <div class="hidden">
-    <div class="m-2 rounded-md hover:shadow-purple-700 shadow-lg h-32"></div>
-    <!-- clases de botones -->
-    <span class="bg-red-300"></span>
-    <span class="bg-red-600"></span>
+      <span class="bg-violet-300"></span>
+      <span class="bg-violet-600"></span>
 
-    <span class="bg-violet-300"></span>
-    <span class="bg-violet-600"></span>
+      <span class="bg-amber-300"></span>
+      <span class="bg-amber-600"></span>
 
-    <span class="bg-amber-300"></span>
-    <span class="bg-amber-600"></span>
+      <span class="bg-emerald-300"></span>
+      <span class="bg-emerald-600"></span>
 
-    <span class="bg-emerald-300"></span>
-    <span class="bg-emerald-600"></span>
+      <span class="bg-lime-300"></span>
+      <span class="bg-lime-600"></span>
 
-    <span class="bg-lime-300"></span>
-    <span class="bg-lime-600"></span>
+      <span class="bg-rose-300"></span>
+      <span class="bg-rose-600"></span>
 
-    <span class="bg-rose-300"></span>
-    <span class="bg-rose-600"></span>
+      <span class="bg-blue-300"></span>
+      <span class="bg-blue-600"></span>
 
-    <span class="bg-blue-300"></span>
-    <span class="bg-blue-600"></span>
+      <span class="bg-pink-300"></span>
+      <span class="bg-pink-600"></span>
 
-    <span class="bg-pink-300"></span>
-    <span class="bg-pink-600"></span>
+      <span class="bg-sky-300"></span>
+      <span class="bg-sky-600"></span>
 
-    <span class="bg-sky-300"></span>
-    <span class="bg-sky-600"></span>
-
-    <span class="bg-stone-50"></span>
-  </div>
-  <script src="index.js"></script>
-</body>
-
+      <span class="bg-stone-50"></span>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
