--- a/memo/index.html
+++ b/memo/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Memorama</title>
+    <link rel="stylesheet" href="../src/app.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memorama</title>
-  <link rel="stylesheet" href="../src/app.css" />
-</head>
+  <body>
+    <div class="flex justify-end max-w-3xl mx-auto hover:text-slate-600 p-4">
+      <a href="/">Regresar</a>
+    </div>
 
-<body>
-  <div class="flex justify-end max-w-3xl mx-auto hover:text-slate-600 p-4"><a href="/">Regresar</a></div>
-
-  <center class="max-w-3xl mx-auto">
-    <section id="board" class="grid grid-cols-4 text-slate-200 md:grid-cols-8"></section>
-  </center>
-  <center class="mt-3">
-    <h2>Intentos <span id="tries"></span></h2>
-  </center>
-  <div
-    class="hidden m-3 bg-slate-200 rounded-md hover:text-white hover:shadow-purple-700 shadow-lg h-20 text-5xl text-black">
-    Div para usar clases no dinamicas</div>
-  <div class="text-white bg-green-500"></div>
-  <script src="index.js"></script>
-</body>
-
+    <center class="max-w-3xl mx-auto">
+      <section
+        id="board"
+        class="grid grid-cols-4 text-slate-200 md:grid-cols-8"
+      ></section>
+    </center>
+    <center class="mt-3">
+      <span id="game_info"> </span>
+      <br />
+      <button
+        id="btnGameOver"
+        class="bg-slate-600 rounded-lg p-2 text-white hover:bg-slate-500 hidden"
+        onclick="location.reload()"
+      >
+        Fin del Juego
+      </button>
+    </center>
+    <div
+      class="hidden m-3 bg-slate-200 rounded-md hover:text-white hover:shadow-purple-700 shadow-lg h-20 text-5xl text-black"
+    >
+      Div para usar clases no dinamicas
+    </div>
+    <div class="text-white bg-green-500"></div>
+    <script src="index.js"></script>
+  </body>
 </html>
