build: construct html & js into build nested dirs

--- a/memo/index.html
+++ b/memo/index.html
@@ -35,6 +35,6 @@
       Div para usar clases no dinamicas
     </div>
     <div class="text-white bg-green-500"></div>
-    <script src="index.js"></script>
+    <script type="module" src="memo.js"></script>
   </body>
 </html>
