--- a/rps/index.html
+++ b/rps/index.html
@@ -21,7 +21,7 @@
     <div id="score"> Score : 0</div>
     <div id="max_score">Max : 0</div>
   </div>
-  <script src="index.js"></script>
+  <script type="module" src="rps.js"></script>
 </body>
 
 </html>
