--- a/fred/index.html
+++ b/fred/index.html
@@ -56,6 +56,6 @@
 
       <span class="bg-stone-50"></span>
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="fred.js"></script>
   </body>
 </html>
