--- a/hangman/index.html
+++ b/hangman/index.html
@@ -22,7 +22,7 @@
     <span class="bg-red-700 hover:bg-red-500"></span>
     <button class="bg-zinc-300 w-10 h-10 rounded text-2xl hover:shadow-xl" id="btn">txt</button>
   </div>
-  <script src="index.js"></script>
+  <script type="module" src="hangman.js"></script>
 </body>
 
 </html>
