--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -26,7 +26,7 @@
     cell classes
   </div>
   <div class="text-5xl text-cyan-400 font-bold"></div>
-  <script src="index.js"></script>
+  <script type="module" src="ttt.js"></script>
 </body>
 
 </html>
